[tool.poetry]
name = "qualysdk"
version = "0.1.45"
description = "SDK for interacting with Qualys APIs, across most modules the platform offers."
authors = ["0x41424142 <jake@jakelindsay.uk>", "0x4A616B65 <jake.lindsay@thermofisher.com>"]
maintainers = ["Jake Lindsay <jake@jakelindsay.uk>"]
readme = "README.md"
license = "MIT License"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",   
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
frozendict = "^2.4.4"
bs4 = "^0.0.2"
lxml = "^5.2.2"
pandas = "^2.2.2"
mkdocs = "^1.6.0"
sqlalchemy = "^2.0.32"
numpy = "^2.0.1"
pymssql = "^2.3.1"
pymysql = "^1.1.1"
pymdown-extensions = "^10.9"
mkdocs-material = "^9.5.34"
psycopg2 = {version = "^2.9.9", platform = "win32"}
psycopg2-binary = [
    {version = "^2.9.9", platform = "linux"},
    {version = "^2.9.9", platform = "darwin"},
]
xmltodict = "^0.13.0"


[tool.poetry.urls]
Homepage = "https://github.com/0x41424142/qualysdk"
Documentation = "https://qualysdk.jakelindsay.uk"
Repository = "https://github.com/0x41424142/qualysdk"
Issues = "https://github.com/0x41424142/qualysdk/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
