[tool.poetry]
name = "qualysdk"
version = "0.3.12"
description = "SDK for interacting with Qualys APIs, across most modules the platform offers."
authors = ["0x41424142 <jake@jakelindsay.uk>", "0x4A616B65 <jake.lindsay@thermofisher.com>"]
maintainers = ["Jake Lindsay <jake@jakelindsay.uk>"]
readme = "README.md"
license = "MIT License"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",   
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.5"
frozendict = "^2.4.4"
bs4 = "^0.0.2"
lxml = "^6.0.2"
pandas = "^2.3.3"
sqlalchemy = "^2.0.37"
numpy = "2.3.2"
pymssql = "2.3.1"
pymysql = "^1.1.1"
psycopg2 = {version = "^2.9.9", platform = "win32"}
psycopg2-binary = [
    {version = "^2.9.9", platform = "linux"},
    {version = "^2.9.9", platform = "darwin"},
]
xmltodict = ">=0.13,<0.15"
defusedxml = "^0.7.1"
packaging = "25.0"
xlsxwriter = "^3.2.9"
mkdocs-material = "^9.6.22"


[tool.poetry.urls]
Homepage = "https://github.com/0x41424142/qualysdk"
Documentation = "https://qualysdk.jakelindsay.uk"
Repository = "https://github.com/0x41424142/qualysdk"
Issues = "https://github.com/0x41424142/qualysdk/issues"

[tool.poetry.scripts]
qualysdk-updater = 'qualysdk.cli.cli_updater:main'
qualysdk-was = 'qualysdk.cli.qualysdk_was:main'
qualysdk-gav = 'qualysdk.cli.qualysdk_gav:main'
qualysdk-pm = 'qualysdk.cli.qualysdk_pm:main'
qualysdk-cert = 'qualysdk.cli.qualysdk_cert:main'
qualysdk-tag = 'qualysdk.cli.qualysdk_tag:main'
qualysdk-users = 'qualysdk.cli.qualysdk_users:main'
qualysdk-rbac = 'qualysdk.cli.qualysdk_rbac:main'

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
pymdown-extensions = "^10.16.1"
mkdocs-material = "^9.6.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
